Update the 'About me' description

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
       Have decent knowhow of <span class="emphasis">micro-services, containers and containers orchestration</span> using <span class="emphasis">docker</span> and <span class="emphasis">Kubernetes</span>.
       Doing all kinds of <span class="emphasis">cloud development</span> including migrating existing workloads to <span class="emphasis">Azure / AWS cloud</span>.
       Have extensive experience in <span class="emphasis">MEAN stack applications (AngularJS / Angular)</span> as well as <span class="emphasis">React, Vue JS</span>.
-      Currently working on <span class="emphasis">SPFx webparts</span> with <span class="emphasis">React</span> framework.
+      Currently working on <span class="emphasis">SPFx webparts</span> and <span class="emphasis">extensions</span> with <span class="emphasis">React</span> framework.
     </p>
 
     <div class="background--skyBlue modal--closed">
