Update fonts and styles.

--- a/index.html
+++ b/index.html
@@ -10,10 +10,8 @@
   <link rel="stylesheet"
         href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
 
-  <link rel="stylesheet"
-        href="https://fonts.googleapis.com/css?family=Montserrat" />
-  <link rel="stylesheet"
-        href="https://fonts.googleapis.com/css?family=Cardo" />
+  <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap"
+        rel="stylesheet">
 </head>
 
 <body>
@@ -117,7 +115,7 @@
 
   <section class="section section--alignCentered section--description">
     <p class="color--darkgrey section__description">
-      A <span class="emphasis">senior software engineer</span> having more than <span class="emphasis">8 years of experience</span> in <span class="emphasis">web development</span>.
+      <span class="emphasis">Senior software engineer</span> having more than <span class="emphasis">8 years of experience</span> in <span class="emphasis">web development</span>.
       I have started my journey from <span class="emphasis">ASP.NET Web Forms, MS SQL Server and Google Maps API</span> 8 years ago.
       Moved to developing <span class="emphasis">robust single page applications</span> using <span class="emphasis">knockout JS</span>.
       Entered into the world of SharePoint, developing <span class="emphasis">SharePoint solutions</span> with complex <span class="emphasis">business workflow processes</span>.
